docs: add documentation for utility modules and functions

--- a/assets/styles/output.css
+++ b/assets/styles/output.css
@@ -1,2 +1,2 @@
 /*! tailwindcss v4.1.11 | MIT License | https://tailwindcss.com */
-.visible{visibility:visible}.static{position:static}.container{width:100%}.contents{display:contents}.inline{display:inline}
+.visible{visibility:visible}.absolute{position:absolute}.static{position:static}.container{width:100%}.contents{display:contents}.inline{display:inline}.table{display:table}
