feat: debug window
Deleted all CLI functionality

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -12,6 +12,7 @@
 @import url("./components/chat.css");
 @import url("./components/home.css");
 @import url("./components/news.css");
+@import url("./components/debug.css");
 
 /* Component-specific text selection rules */
 .nav-text,
