chore: add placeholders for chats and Play together

--- a/assets/styles/components/home.css
+++ b/assets/styles/components/home.css
@@ -156,6 +156,20 @@
     }
 }
 
+/* Play Together Placeholder */
+.play-together-placeholder {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: "Gilroy-Medium", Helvetica, Arial, sans-serif;
+    font-size: 14px;
+    color: #6f6f6f;
+    user-select: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+}
+
 /* Home Content Sections */
 .home-content,
 .cloud-content,
